--- a/css/styles.css
+++ b/css/styles.css
@@ -1,70 +1,3 @@
-/*fonts*/
-@font-face {
-    font-family: 'aleoregular';
-    src: url('fonts/aleo-regular/aleo-regular-webfont.eot');
-    src: url('fonts/aleo-regular/aleo-regular-webfont.eot?#iefix') format('embedded-opentype'),
-    url('fonts/aleo-regular/aleo-regular-webfont.woff2') format('woff2'),
-    url('fonts/aleo-regular/aleo-regular-webfont.woff') format('woff'),
-    url('fonts/aleo-regular/aleo-regular-webfont.ttf') format('truetype'),
-    url('fonts/aleo-regular/aleo-regular-webfont.svg#aleoregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'oswald_regularregular';
-    src: url('fonts/oswald-regular/oswald-regular-webfont.eot');
-    src: url('fonts/oswald-regular/oswald-regular-webfont.eot?#iefix') format('embedded-opentype'),
-    url('fonts/oswald-regular/oswald-regular-webfont.woff2') format('woff2'),
-    url('fonts/oswald-regular/oswald-regular-webfont.woff') format('woff'),
-    url('fonts/oswald-regular/oswald-regular-webfont.ttf') format('truetype'),
-    url('fonts/oswald-regular/oswald-regular-webfont.svg#oswald_regularregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'oswaldbold';
-    src: url('fonts/oswald-bold/oswald-bold-webfont.eot');
-    src: url('fonts/oswald-bold/oswald-bold-webfont.eot?#iefix') format('embedded-opentype'),
-    url('fonts/oswald-bold/oswald-bold-webfont.woff2') format('woff2'),
-    url('fonts/oswald-bold/oswald-bold-webfont.woff') format('woff'),
-    url('fonts/oswald-bold/oswald-bold-webfont.ttf') format('truetype'),
-    url('fonts/oswald-bold/oswald-bold-webfont.svg#oswaldbold') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'aleobold';
-    src: url('fonts/aleo-bold/aleo-bold-webfont.eot');
-    src: url('fonts/aleo-bold/aleo-bold-webfont.eot?#iefix') format('embedded-opentype'),
-    url('fonts/aleo-bold/aleo-bold-webfont.woff2') format('woff2'),
-    url('fonts/aleo-bold/aleo-bold-webfont.woff') format('woff'),
-    url('fonts/aleo-bold/aleo-bold-webfont.ttf') format('truetype'),
-    url('fonts/aleo-bold/aleo-bold-webfont.svg#aleobold') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'oswaldlight';
-    src: url('fonts/oswald-light/oswald-light-webfont.eot');
-    src: url('fonts/oswald-light/oswald-light-webfont.eot?#iefix') format('embedded-opentype'),
-    url('fonts/oswald-light/oswald-light-webfont.woff2') format('woff2'),
-    url('fonts/oswald-light/oswald-light-webfont.woff') format('woff'),
-    url('fonts/oswald-light/oswald-light-webfont.ttf') format('truetype'),
-    url('fonts/oswald-light/oswald-light-webfont.svg#oswaldlight') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'aleolight';
-    src: url('fonts/aleo-light/aleo-light-webfont.eot');
-    src: url('fonts/aleo-light/aleo-light-webfont.eot?#iefix') format('embedded-opentype'),
-    url('fonts/aleo-light/aleo-light-webfont.woff2') format('woff2'),
-    url('fonts/aleo-light/aleo-light-webfont.woff') format('woff'),
-    url('fonts/aleo-light/aleo-light-webfont.ttf') format('truetype'),
-    url('fonts/aleo-light/aleo-light-webfont.svg#aleolight') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
 /*Base*/
 * {
     padding: 0;
@@ -82,16 +15,90 @@ body {
     margin-right: auto;
     position: relative;
 }
-/*header*/
-header {
-    background-color: #e9e9e9;
-    height: 30px;
-    border-bottom: 1px solid #cccccc;
+/*fonts*/
+@font-face {
+    font-family: 'aleoregular';
+    src: url('../fonts/aleo-regular/aleo-regular-webfont.eot');
+    src: url('../fonts/aleo-regular/aleo-regular-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/aleo-regular/aleo-regular-webfont.woff2') format('woff2'),
+    url('../fonts/aleo-regular/aleo-regular-webfont.woff') format('woff'),
+    url('../fonts/aleo-regular/aleo-regular-webfont.ttf') format('truetype'),
+    url('../fonts/aleo-regular/aleo-regular-webfont.svg#aleoregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
+@font-face {
+    font-family: 'oswald_regularregular';
+    src: url('../fonts/oswald-regular/oswald-regular-webfont.eot');
+    src: url('../fonts/oswald-regular/oswald-regular-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/oswald-regular/oswald-regular-webfont.woff2') format('woff2'),
+    url('../fonts/oswald-regular/oswald-regular-webfont.woff') format('woff'),
+    url('../fonts/oswald-regular/oswald-regular-webfont.ttf') format('truetype'),
+    url('../fonts/oswald-regular/oswald-regular-webfont.svg#oswald_regularregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'oswaldbold';
+    src: url('../fonts/oswald-bold/oswald-bold-webfont.eot');
+    src: url('../fonts/oswald-bold/oswald-bold-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/oswald-bold/oswald-bold-webfont.woff2') format('woff2'),
+    url('../fonts/oswald-bold/oswald-bold-webfont.woff') format('woff'),
+    url('../fonts/oswald-bold/oswald-bold-webfont.ttf') format('truetype'),
+    url('../fonts/oswald-bold/oswald-bold-webfont.svg#oswaldbold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'aleobold';
+    src: url('../fonts/aleo-bold/aleo-bold-webfont.eot');
+    src: url('../fonts/aleo-bold/aleo-bold-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/aleo-bold/aleo-bold-webfont.woff2') format('woff2'),
+    url('../fonts/aleo-bold/aleo-bold-webfont.woff') format('woff'),
+    url('../fonts/aleo-bold/aleo-bold-webfont.ttf') format('truetype'),
+    url('../fonts/aleo-bold/aleo-bold-webfont.svg#aleobold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'oswaldlight';
+    src: url('../fonts/oswald-light/oswald-light-webfont.eot');
+    src: url('../fonts/oswald-light/oswald-light-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/oswald-light/oswald-light-webfont.woff2') format('woff2'),
+    url('../fonts/oswald-light/oswald-light-webfont.woff') format('woff'),
+    url('../fonts/oswald-light/oswald-light-webfont.ttf') format('truetype'),
+    url('../fonts/oswald-light/oswald-light-webfont.svg#oswaldlight') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'aleolight';
+    src: url('../fonts/aleo-light/aleo-light-webfont.eot');
+    src: url('../fonts/aleo-light/aleo-light-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/aleo-light/aleo-light-webfont.woff2') format('woff2'),
+    url('../fonts/aleo-light/aleo-light-webfont.woff') format('woff'),
+    url('../fonts/aleo-light/aleo-light-webfont.ttf') format('truetype'),
+    url('../fonts/aleo-light/aleo-light-webfont.svg#aleolight') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'nexa_boldregular';
+    src: url('../fonts/nexa-bold/nexabold-webfont.eot');
+    src: url('../fonts/nexa-bold/nexabold-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/nexa-bold/nexabold-webfont.woff2') format('woff2'),
+    url('../fonts/nexa-bold/nexabold-webfont.woff') format('woff'),
+    url('../fonts/nexa-bold/nexabold-webfont.ttf') format('truetype'),
+    url('../fonts/nexa-bold/nexabold-webfont.svg#nexa_boldregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+/*header*/
+
 .notification {
     position: absolute;
-    top: 0;
-    right: 50px;
+    top: -30px;
+    right: 80px;
     line-height: 25rem;
     text-decoration: none;
 }
@@ -113,18 +120,7 @@ header {
     border-right: 110px solid transparent;
     border-top: 25px solid #f52c66;
 }
-.tabs li {
-    list-style: none;
-    display: inline-block;
-    padding: 0 12px 0 12px;
-    font-family: 'aleoregular', sans-serif;
-    font-size: 16rem;
-    height: 30px;
-    line-height: 30px;
-}
-.tabs .active {
-    background-color: #ffffff;
-}
+
 /* Scaffolding --------------------------------------------------------------*/
 
 /* Typography ---------------------------------------------------------------*/
@@ -140,15 +136,107 @@ header {
 /* Navbar -------------------------------------------------------------------*/
 
 /* Tabs ---------------------------------------------------------------------*/
-
+.tabs li {
+    list-style: none;
+    display: inline-block;
+    padding: 0 12px 0 12px;
+    font-family: 'aleoregular', sans-serif;
+    font-size: 16rem;
+    height: 30px;
+    line-height: 35px;
+    border-right: 1px solid #cccccc;
+    border-collapse: collapse;
+    margin-right:-3px;
+}
+.tabs li:first-child {
+    border-left: 1px solid #cccccc;
+    font-family: 'aleoregular', sans-serif;
+    text-transform: uppercase;
+}
+.tabs li:nth-child(2) {
+    font-family: 'oswald_regularregular', sans-serif;
+    text-transform: uppercase;
+}
+.tabs li:nth-child(3) {
+    font-family: 'nexa_boldregular', sans-serif;
+}
+.tabs li:not(.active):hover {
+    background-color: #999999;
+    cursor: pointer;
+}
+.active {
+    background-color: #ffffff;
+    margin-top: 1px;
+}
 /* Thumbnails ---------------------------------------------------------------*/
 
 /* Carousel -----------------------------------------------------------------*/
 
 /* Page Layout --------------------------------------------------------------*/
-
-
-
+header {
+    height: 130px;
+    border-bottom: 1px solid #cccccc;
+}
+.tab-group {
+    background-color: #e9e9e9;
+    height: 30px;
+    border-bottom: 1px solid #cccccc;
+}
+.currency {
+    position: absolute;
+    top: 60px;
+    left: 40px;
+}
+.currenvy select {
+    font-family: 'oswaldlight', sans-serif;
+    font-size: 16rem;
+}
+.flag {
+    height: 17px;
+    width: 22px;
+    background: url('../images/thumbnails/england.png') center center no-repeat;
+}
+.currency div {
+    display: inline-block;
+    line-height: 17px;
+}
+.logo {
+    height: 99px;
+    text-align: center;
+    background: #fff url('../images/thumbnails/logofull.png') center center no-repeat;
+    border-bottom: 1px solid #cccccc;
+}
+.MyAccount {
+    position: absolute;
+    right: 80px;
+    top: 60px;
+    font-family: 'oswaldlight', sans-serif;
+    font-size: 16rem;
+    font-weight: bold;
+}
+.account:after{
+    content: " | ";
+    color: #999999;
+}
+.PCOnly:after {
+    content: " | ";
+    color: #999999;
+}
+.MyAccount a, .MyAccount a span {
+    color: #999999;
+    text-decoration: none;
+}
+.cartQuantity {
+    color: #000000;
+}
+.TotalSum {
+    color: #999999;
+}
+.MyAccount > a,
+.MyAccount > div,
+.MyAccount > span {
+    display: inline-block;
+}
 /* Mobile View --------------------------------------------------------------*/
 @media (max-width: 767px) {
     .container {
@@ -166,7 +254,7 @@ header {
 /* Desktop View -------------------------------------------------------------*/
 @media (min-width: 1000px) {
     .container {
-        width: 940px;
+        width: 1100px;
     }
 
 }
