--- a/css/styles.css
+++ b/css/styles.css
@@ -132,11 +132,22 @@ body {
 .adv-topic {
     text-transform: uppercase;
     font-family: 'oswaldlight', sans-serif;
-    margin-top: 58rem;
     text-align: center;
     font-size: 40rem;
     color: #333333;
+    margin-top: 52rem;
 }
+.adv-topic:before {
+    content:"";
+    display:block;
+    position:absolute;
+    left:0;
+    top: 66rem;
+    width:100%;
+    height:3px;
+    background-color: #333333;
+}
+
 /* Iconography --------------------------------------------------------------*/
 
 /* Buttons ------------------------------------------------------------------*/
@@ -328,10 +339,6 @@ nav ul li:hover {
     background: url('../images/icons/icons.png') no-repeat -213rem 0;
 }
 /* Carousel -----------------------------------------------------------------*/
-
-.carousel {
-    height: 419rem;
-}
 .carousel-image-1 {
     background: url(../images/thumbnails/carousel-image.png) no-repeat;
 }
@@ -342,7 +349,8 @@ nav ul li:hover {
     background: url(../images/thumbnails/carousel-image.png) no-repeat;
 }
 .carousel-image-1, .carousel-image-2, .carousel-image-3 {
-    height: 419rem;
+    height: 420px;
+    background-size: cover;
 }
 .content {
     list-style: none;
@@ -352,6 +360,13 @@ nav ul li:hover {
 }
 .active {
     display: block;
+}
+.carousel:after {
+    content: "";
+    display: block;
+    clear: both;
+    height: 0;
+    visibility: hidden;
 }
 /* Page Layout --------------------------------------------------------------*/
 header {
@@ -422,7 +437,7 @@ header {
     color: #999999;
 }
 .adv-wrapper {
-    margin: 30px auto 0 auto;
+    margin: 55rem auto 0 auto;
     text-align: justify;
 }
 .adv-wrapper:after {
