--- a/css/styles.css
+++ b/css/styles.css
@@ -137,15 +137,25 @@ body {
     color: #333333;
     margin-top: 52rem;
 }
+.adv-topic:after {
+    content:"";
+    position:absolute;
+    display: block;
+    z-index: -1;
+    left:0;
+    top: 55rem;
+    width:100%;
+    border-bottom: 3rem solid #333333;
+}
 .adv-topic:before {
     content:"";
-    display:block;
     position:absolute;
+    display: block;
+    z-index: -1;
     left:0;
-    top: 66rem;
+    top: 60rem;
     width:100%;
-    height:3px;
-    background-color: #333333;
+    border-bottom: 1rem solid #333333;
 }
 
 /* Iconography --------------------------------------------------------------*/
@@ -461,17 +471,33 @@ header {
     margin: 0;
     line-height: 25px;
 }
+.adv-text {
+    margin: 50px auto 30px auto;
+    text-align: center;
+}
+.adv-text > h2 {
+    font-family: 'oswaldlight', sans-serif;
+    font-size: 30rem;
+    color: #333333;
+    margin: 60rem auto 0 auto;
+}
+.adv-text > p {
+    font-family: 'aleoregular', sans-serif;
+    font-size: 18rem;
+    color: #999999;
+    margin: 45rem 0 80rem 0;
+}
 .goods {
     background-color: #f6f6f6;
 }
 .goods-main-block {
-    margin: 30px auto 0 auto;
     text-align: justify;
 }
-.goods-main-block:after {
+.goods-main-block:last-child:after {
     content: "";
     display: inline-block;
     width: 100%;
+    margin-bottom: 80rem;
 }
 .goods-block {
     margin: 28px auto 0 auto;
