--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,9 @@
     padding: 0;
     margin: 0;
     border: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 html {
     font-size: 1px;
@@ -97,39 +100,46 @@ body {
     font-style: normal;
 }
 /*header*/
-.notification a {
-    line-height: 25rem;
-    text-decoration: none;
+.notification {
+    position: absolute;
+    top: 0;
+    right: 30rem;
 }
-.rectangle {
-    width: 220rem;
-    height: 30rem;
+.notification a {
     background-color: #f52c66;
     color: #ffffff;
+    display: block;
     font-family: 'aleoregular', sans-serif;
     font-size: 16rem;
+    line-height: 25rem;
+    width: 220rem;
+    height: 30rem;
     text-align: center;
-    margin: auto;
-    border: none;
+    text-decoration: none;
 }
-.triangle {
-    width: 0;
-    height: 0;
+.notification a:after {
+    content:"";
+    display: block;
     border-left: 110rem solid transparent;
     border-right: 110rem solid transparent;
     border-top: 25rem solid #f52c66;
+    width: 0;
+    height: 0;
+    margin-top: -20rem;
 }
 
 /* Scaffolding --------------------------------------------------------------*/
 
+
 /* Typography ---------------------------------------------------------------*/
 .adv-topic {
-    text-transform: uppercase;
-    font-family: 'oswaldlight', sans-serif;
-    text-align: center;
-    font-size: 40rem;
     color: #333333;
+    font-family: 'oswaldlight', sans-serif;
+    font-size: 40rem;
     margin-top: 52rem;
+    position: relative;
+    text-align: center;
+    text-transform: uppercase;
 }
 .adv-topic:after {
     content:"";
@@ -157,53 +167,57 @@ body {
 /* Buttons ------------------------------------------------------------------*/
 
 /* Forms --------------------------------------------------------------------*/
+:focus {
+    outline: 0;
+}
 
 /* Container sizes ----------------------------------------------------------*/
 
 /* Navbar -------------------------------------------------------------------*/
 nav {
-    border-bottom: 1px solid #cccccc;
+    border-bottom: 1rem solid #cccccc;
+    border-top: 1rem solid #cccccc;
 }
 nav ul li {
     float: left;
     list-style: none;
-    width: 74px;
+    width: 74rem;
     text-align: center;
 }
 nav ul li a {
+    color: #999999;
+    display: block;
     font-family: 'oswaldlight', sans-serif;
     font-size: 16rem;
     font-weight: bold;
     text-transform: uppercase;
-    color: #999999;
     text-decoration: none;
-    line-height: 35px;
+    line-height: 35rem;
 }
 nav ul li:hover a {
     color: #ffffff;
 }
-.search-wrapper input {
-    font-family: 'oswaldlight', sans-serif;
-    font-size: 16rem;
-    line-height: 35px;
-    color: #999999;
-    padding-left: 20px;
-}
+/* Search -------------------------------------------------------------------*/
 .search-wrapper {
     height: 35rem;
     float: right;
-    border-right: 1px solid #cccccc;
-    border-left: 1px solid #cccccc;
+    border-right: 1rem solid #cccccc;
+    border-left: 1rem solid #cccccc;
+}
+.search-wrapper input {
+    font-family: 'oswaldlight', sans-serif;
+    font-size: 16rem;
+    float: left;
+    line-height: 35rem;
+    color: #999999;
+    padding-left: 20rem;
 }
 .search-button {
     background: url('../images/thumbnails/search.png') center center no-repeat;
-    background-size: cover;
-    width: 15rem;
-    height: 15rem;
+    width: 35rem;
+    height: 35rem;
     cursor: pointer;
     float: right;
-    margin-right: 14rem;
-    margin-top: 10rem;
 }
 .search-radius-button-wrapper {
     margin-top: 55rem;
@@ -211,9 +225,9 @@ nav ul li:hover a {
 }
 .search-radius-button {
     font-family: 'oswald_regularregular', sans-serif;
-    font-size: 30px;
-    height: 68px;
-    width: 246px;
+    font-size: 30rem;
+    height: 68rem;
+    width: 246rem;
     border-radius: 0;
     background-color: #006699;
     color: #ffffff;
@@ -222,35 +236,37 @@ nav ul li:hover a {
 /* Tabs ---------------------------------------------------------------------*/
 .tabs li {
     list-style: none;
-    display: inline-block;
-    padding: 0 12px 0 12px;
+    display: block;
+    float: left;
     font-family: 'aleoregular', sans-serif;
     font-size: 16rem;
-    height: 30px;
-    line-height: 35px;
-    border-right: 1px solid #cccccc;
-    border-collapse: collapse;
-    margin-right:-3px;
+    height: 30rem;
+    line-height: 30rem;
+    border-right: 1rem solid #cccccc;
 }
 .tabs li:first-child {
-    border-left: 1px solid #cccccc;
+    border-left: 1rem solid #cccccc;
     font-family: 'aleoregular', sans-serif;
-    text-transform: uppercase;
 }
 .tabs li:nth-child(2) {
     font-family: 'oswald_regularregular', sans-serif;
-    text-transform: uppercase;
 }
 .tabs li:nth-child(3) {
     font-family: 'nexa_boldregular', sans-serif;
 }
-.tabs li:not(.active):hover {
-    background-color: #999999;
-    cursor: pointer;
+.tabs li a,
+.tabs li span {
+    display: block;
+    padding: 0 12rem 0 12rem;
 }
-.active {
+.tabs li a {
+    text-decoration: none;
+}
+.tabs li:not(.active) a:hover {
+    background-color: #999999;
+}
+.tabs li.active {
     background-color: #ffffff;
-    margin-top: 1px;
 }
 /* Thumbnails ---------------------------------------------------------------*/
 .jackets {
@@ -351,7 +367,7 @@ nav ul li:hover a {
     background: url(../images/thumbnails/carousel-image.png) no-repeat;
 }
 .carousel-image-1, .carousel-image-2, .carousel-image-3 {
-    height: 420px;
+    height: 420rem;
     background-size: cover;
 }
 .content {
@@ -373,39 +389,37 @@ nav ul li:hover a {
 /* Page Layout --------------------------------------------------------------*/
 header {
     height: 130px;
-    border-bottom: 1px solid #cccccc;
 }
 .tab-group {
     background-color: #e9e9e9;
-    height: 30px;
-    border-bottom: 1px solid #cccccc;
+    height: 30rem;
+    border-bottom: 1rem solid #cccccc;
 }
 .currency {
     position: absolute;
-    top: 60px;
-    left: 40px;
+    top: 60rem;
+    left: 40rem;
 }
 .currency select {
     font-family: 'oswaldlight', sans-serif;
     font-size: 16rem;
 }
 .flag {
-    height: 17px;
-    width: 22px;
+    height: 17rem;
+    width: 22rem;
     background: url('../images/thumbnails/england.png') center center no-repeat;
 }
 .currency div {
     display: inline-block;
-    line-height: 17px;
+    line-height: 17rem;
 }
 .logo {
     position: absolute;
     top: 20rem;
-    right: 50%;
-    margin-right: -95rem;
-    text-align: center;
+    left: 50%;
+    margin-left: -95rem;
 }
-.account-wrapper {
+.account-info {
     position: absolute;
     font-family: 'oswaldlight', sans-serif;
     font-size: 16rem;
@@ -415,6 +429,10 @@ header {
     display: inline-block;
     list-style: none;
 }
+.account-info li:not(:last-child):after{
+    content: " | ";
+    color: #999999;
+}
 .account-info li a {
     text-decoration: none;
     color: #999999;
@@ -422,14 +440,10 @@ header {
 .account-info li a:hover {
     color: #000000;
 }
-.account:after{
-    content: " | ";
-    color: #999999;
-}
-.PC-only:after {
-    content: " | ";
-    color: #999999;
-}
+
+
+
+
 .cart-quantity a {
     color: #000000;
 }
@@ -446,23 +460,23 @@ header {
     width: 100%;
 }
 .adv-blocks {
-    width: 140px;
-    height: 110px;
+    width: 140rem;
+    height: 110rem;
     font-family: 'aleoregular', sans-serif;
-    font-size: 36px;
+    font-size: 36rem;
     display: inline-block;
     position: relative;
 }
 .adv-blocks > p {
     position: absolute;
-    left: 20px;
-    bottom: 18px;
+    left: 20rem;
+    bottom: 18rem;
     color: #ffffff;
     margin: 0;
-    line-height: 25px;
+    line-height: 25rem;
 }
 .adv-text {
-    margin: 50px auto 30px auto;
+    margin: 50rem auto 30rem auto;
     text-align: center;
 }
 .adv-text > h2 {
@@ -492,7 +506,7 @@ header {
     margin-bottom: 80rem;
 }
 .goods-block {
-    margin: 28px auto 0 auto;
+    margin: 28rem auto 0 auto;
     padding: 0;
     position: relative;
 }
@@ -502,7 +516,7 @@ header {
 .goods-topic {
     font-family: 'oswaldlight', sans-serif;
     color: #434343;
-    font-size: 40px;
+    font-size: 40rem;
     margin: 50rem auto 0 auto;
     display: inline-block;
     text-transform: uppercase;
@@ -510,8 +524,8 @@ header {
 .goods-subtopic {
     color: #999999;
     font-family: 'aleoregular', sans-serif;
-    font-size: 18px;
-    margin-top: 16px;
+    font-size: 18rem;
+    margin-top: 16rem;
     text-align: center;
 }
 .goods-subtopic > p {
@@ -523,30 +537,30 @@ header {
 }
 .price-name {
     font-family: 'oswald_regularregular', sans-serif;
-    font-size: 16px;
+    font-size: 16rem;
     text-transform: uppercase;
-    padding-top: 23px;
+    padding-top: 23rem;
     color: #666666;
 }
 .smallLine {
-    width: 100px;
-    height: 1px;
+    width: 100rem;
+    height: 1rem;
     background-color: #666666;
-    margin: 12px auto 0 auto;
+    margin: 12rem auto 0 auto;
 }
 .price {
     font-family: 'oswaldbold', sans-serif;
     color: #ffffff;
-    font-size: 18px;
-    margin-top: 11px;
+    font-size: 18rem;
+    margin-top: 11rem;
 }
 .add-to-cart {
     background-color: #2fb789;
     color: #ffffff;
     text-align: center;
-    line-height: 45px;
+    line-height: 45rem;
     font-family: 'Oswald-light', sans-serif;
-    font-size: 18px;
+    font-size: 18rem;
     text-decoration: none !important;
     display: block;
 }
@@ -584,23 +598,23 @@ header {
 .social-topic {
     text-align: center;
     font-family: 'oswaldlight', sans-serif;
-    font-size: 24px;
+    font-size: 24rem;
     text-transform: uppercase;
-    margin-top: 30px;
+    margin-top: 30rem;
     color: #434343;
 }
 .social-text {
     text-align: center;
     font-family: 'aleoregular', sans-serif;
-    font-size: 16px;
-    margin-top: 25px;
+    font-size: 16rem;
+    margin-top: 25rem;
     color: #a9a9a9;
 }
 .social-link {
     display: block;
     font-family: 'oswald_regularregular', sans-serif;
-    font-size: 16px;
-    margin-top: 25px;
+    font-size: 16rem;
+    margin-top: 25rem;
     color: #555555;
     text-transform: uppercase;
     text-decoration: none;
@@ -618,8 +632,8 @@ header {
 .twitter-topic {
     text-align: center;
     font-family: 'oswald_regularregular', sans-serif;
-    font-size: 24px;
-    margin-top: 55px;
+    font-size: 24rem;
+    margin-top: 55rem;
 }
 .grey {
     color: #999999;
@@ -631,15 +645,15 @@ header {
 .twitter-text {
     color: #999999;
     text-align: center;
-    margin-top: 32px;
-    padding-bottom: 43px;
+    margin-top: 32rem;
+    padding-bottom: 43rem;
     font-family: 'oswaldlight', sans-serif;
-    font-size: 22px;
+    font-size: 22rem;
     display: inline-block;
 }
 .map {
     background: url('../images/thumbnails/world.png') center top no-repeat;
-    height: 600px;
+    height: 600rem;
     width: 100%;
 }
 .locator {
@@ -678,23 +692,23 @@ header {
     text-align: center;
 }
 .range {
-    width: 160px;
-    height: 60px;
+    width: 160rem;
+    height: 60rem;
     display: inline-block;
     background-color: rgba(0, 0, 0, 0);
     border: 0;
     font-family: 'Oswald', sans-serif;
-    font-size: 36px;
+    font-size: 36rem;
     padding: 0;
 }
 .range-radius label {
     font-family: 'Oswald', sans-serif;
-    font-size: 36px;
+    font-size: 36rem;
     text-transform: uppercase;
     color: #b8b8b8;
 }
 footer {
-    border-top: 2px solid #d7d7d7;
+    border-top: 2rem solid #d7d7d7;
     height: 355rem;
 }
 .footer-wrapper {
@@ -714,7 +728,7 @@ footer {
 }
 .footer-social-links p {
     font-family: 'aleoregular', sans-serif;
-    font-size: 16px;
+    font-size: 16rem;
     color: #999999;
 }
 .footer-social-links ul li {
@@ -722,7 +736,7 @@ footer {
     display: inline-block;
 }
 .footer-general-links ul li {
-    margin-top: 15px;
+    margin-top: 15rem;
     list-style: none;
     padding: 0;
 }
@@ -730,25 +744,25 @@ footer {
     text-decoration: none;
     color: #666666;
     font-family: 'oswaldlight', sans-serif;
-    font-size: 18px;
+    font-size: 18rem;
 }
 .footer-general-links h1,
 .footer-blogs h1,
 .subscription-forms h1 {
     font-family: 'oswald_regularregular', sans-serif;
-    font-size: 18px;
+    font-size: 18rem;
     text-transform: uppercase;
     margin-bottom: 38rem;
 }
 .footer-blogs h3 {
     font-family: 'oswaldlight', sans-serif;
-    font-size: 18px;
+    font-size: 18rem;
     color: #333333;
     margin-top: 25rem;
 }
 .footer-blogs p {
     font-family: 'oswaldlight', sans-serif;
-    font-size: 18px;
+    font-size: 18rem;
     color: #999999;
     margin-top: 20rem;
 }
@@ -774,7 +788,7 @@ footer {
 }
 .subscription-button {
     font-family: 'oswald_regularregular', sans-serif;
-    font-size: 16px;
+    font-size: 16rem;
     color: #ffffff;
     background-color: #006699;
     border-radius: 0;
@@ -783,16 +797,16 @@ footer {
     margin-top: 25rem;
 }
 /* Mobile View --------------------------------------------------------------*/
-@media (max-width: 767px) {
+@media (max-width: 767rem) {
     .container {
-        width: 320rem;
+        width: 360rem;
         padding-right: 20rem;
         padding-left: 20rem;
     }
     .notification {
         display: none;
     }
-    .account-wrapper {
+    .account-info {
         display: none;
     }
     .currency {
@@ -821,52 +835,52 @@ footer {
         margin: 10rem auto 0 auto;
     }
     .adv-blocks {
-        width: 140px;
-        height: 110px;
+        width: 140rem;
+        height: 110rem;
     }
     .goods-block {
-        height: 308px;
-        width: 140px;
+        height: 308rem;
+        width: 140rem;
     }
     .goods-pic {
-        width: 140px;
-        height: 140px;
+        width: 140rem;
+        height: 140rem;
     }
     .price-tag {
-        height: 123px;
-        width: 140px;
+        height: 123rem;
+        width: 140rem;
     }
     .add-to-cart {
-        height: 45px;
-        width: 140px;
+        height: 45rem;
+        width: 140rem;
     }
     .discount {
         color: #ff3366;
     }
     .sale {
-        top: 80px;
-        width: 140px;
-        height: 40px;
+        top: 80rem;
+        width: 140rem;
+        height: 40rem;
     }
     .new {
-        top: 80px;
-        width: 140px;
-        height: 40px;
+        top: 80rem;
+        width: 140rem;
+        height: 40rem;
     }
     .carousel-image-1, .carousel-image-2, .carousel-image-3 {
         background-position: 50% 70%;
     }
     .social-line {
-        margin: 55px auto 45px auto;
-        height: 1px;
-        width: 93px;
+        margin: 55rem auto 45rem auto;
+        height: 1rem;
+        width: 93rem;
         background-color: #e9e9e9;
     }
 }
 /* Tablet View --------------------------------------------------------------*/
-@media (min-width: 768px) and (max-width: 999px) {
+@media (min-width: 768rem) and (max-width: 999rem) {
     .container {
-        width: 620rem;
+        width: 660rem;
         padding-right: 20rem;
         padding-left: 20rem;
     }
@@ -874,59 +888,57 @@ footer {
         display: none;
     }
     .notification {
-        position: absolute;
-        top: -30rem;
         right: 20rem;
     }
-    .account-wrapper {
-        right: 20px;
-        top: 60px;
+    .account-info {
+        right: 20rem;
+        top: 60rem;
     }
-    .PC-only {
+    .desktop-visible {
         display: none !important;
     }
     nav ul li:hover {
         background-color: #000000;
     }
     .search-wrapper {
-        width: 40px;
+        width: 40rem;
     }
     .search-input {
         display: none;
     }
     .goods-block {
-        height: 308px;
-        width: 140px;
+        height: 308rem;
+        width: 140rem;
         display: inline-block;
     }
     .goods-pic {
-        width: 140px;
-        height: 140px;
+        width: 140rem;
+        height: 140rem;
     }
     .price-tag {
-        height: 123px;
-        width: 140px;
+        height: 123rem;
+        width: 140rem;
     }
     .add-to-cart {
-        height: 45px;
-        width: 140px;
+        height: 45rem;
+        width: 140rem;
     }
     .discount {
         color: #ff3366;
     }
     .sale {
-        top: 80px;
-        width: 140px;
-        height: 40px;
+        top: 80rem;
+        width: 140rem;
+        height: 40rem;
     }
     .new {
-        top: 80px;
-        width: 140px;
-        height: 40px;
+        top: 80rem;
+        width: 140rem;
+        height: 40rem;
     }
     .social-main-block {
         width: 100%;
-        margin: 80px auto 0 auto;
+        margin: 80rem auto 0 auto;
         text-align: justify;
     }
     .social-main-block:after {
@@ -937,8 +949,8 @@ footer {
     .social-block {
         text-align: center;
         display: inline-block;
-        width: 180px;
-        height: 290px;
+        width: 180rem;
+        height: 290rem;
     }
     .zip-address {
         width: 520rem;
@@ -952,62 +964,60 @@ footer {
     .footer-general-links,
     .footer-blogs,
     .subscription-forms {
-        width: 140px;
+        width: 140rem;
         display: inline-block;
         vertical-align: top;
     }
     .icon-link {
-        height: 35px;
-        width: 35px;
+        height: 35rem;
+        width: 35rem;
         margin: 10rem 0 0 0;
         display: block;
     }
 }
 /* Desktop View -------------------------------------------------------------*/
-@media (min-width: 1000px) {
+@media (min-width: 1000rem) {
     .container {
-        width: 940rem;
+        width: 1000rem;
         padding-right: 30rem;
         padding-left: 30rem;
     }
     .mobile-button {
         display: none;
     }
-    .notification {
-        position: absolute;
-        top: -30rem;
-        right: 30rem;
-    }
-    .account-wrapper {
-        right: 80px;
-        top: 60px;
+    .account-info {
+        right: 80rem;
+        top: 60rem;
     }
     nav ul li:hover {
         background-color: #167c9a;
     }
     .search-wrapper {
-        width: 270px;
+        width: 270rem;
+    }
+    .search-wrapper input {
+        width: 233rem;
     }
     .adv-blocks {
-        width: 220px;
-        height: 170px;
+        width: 220rem;
+        height: 170rem;
     }
     .goods-block {
-        height: 360px;
-        width: 220px;
+        height: 360rem;
+        width: 220rem;
         display: inline-block;
     }
     .goods-pic {
-        width: 220px;
-        height: 220px;
+        width: 220rem;
+        height: 220rem;
     }
     .price-tag {
-        height: 95px;
-        width: 220px;
+        height: 95rem;
+        width: 220rem;
     }
     .add-to-cart {
-        height: 45px;
-        width: 220px;
+        height: 45rem;
+        width: 220rem;
     }
     .discount {
         color: #ff3366;
@@ -1027,7 +1037,7 @@ footer {
     }
     .social-main-block {
         width: 100%;
-        margin: 80px auto 0 auto;
+        margin: 80rem auto 0 auto;
         text-align: justify;
     }
     .social-main-block:after {
@@ -1038,8 +1048,8 @@ footer {
     .social-block {
         text-align: center;
         display: inline-block;
-        width: 240px;
-        height: 290px;
+        width: 240rem;
+        height: 290rem;
     }
     .social-line {
         display: none;
@@ -1055,14 +1065,14 @@ footer {
     .footer-general-links,
     .footer-blogs,
     .subscription-forms {
-        width: 220px;
+        width: 220rem;
         display: inline-block;
         vertical-align: top;
     }
     .icon-link {
-        height: 35px;
-        width: 35px;
-        margin: 10px 14rem 0 0;
+        height: 35rem;
+        width: 35rem;
+        margin: 10rem 14rem 0 0;
         display: block;
     }
 }
