--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,7 @@ body {
     display: block;
     border-left: 110rem solid transparent;
     border-right: 110rem solid transparent;
-    border-top: 25rem solid #f52c66;
+    border-top: 22rem solid #f52c66;
     width: 0;
     height: 0;
     margin-top: -20rem;
@@ -250,9 +250,11 @@ nav ul li:hover a {
 }
 .tabs li:nth-child(2) {
     font-family: 'oswald_regularregular', sans-serif;
+    width: 83rem;
 }
 .tabs li:nth-child(3) {
     font-family: 'nexa_boldregular', sans-serif;
+    width: 108rem;
 }
 .tabs li a,
 .tabs li span {
@@ -261,9 +263,12 @@ nav ul li:hover a {
 }
 .tabs li a {
     text-decoration: none;
+    text-align: center;
+    color: #999999;
 }
 .tabs li:not(.active) a:hover {
     background-color: #999999;
+    color: #ffffff;
 }
 .tabs li.active {
     background-color: #ffffff;
@@ -388,7 +393,7 @@ nav ul li:hover a {
 }
 /* Page Layout --------------------------------------------------------------*/
 header {
-    height: 130px;
+    height: 130rem;
 }
 .tab-group {
     background-color: #e9e9e9;
@@ -396,13 +401,12 @@ header {
     border-bottom: 1rem solid #cccccc;
 }
 .currency {
-    position: absolute;
-    top: 60rem;
-    left: 40rem;
-}
-.currency select {
     font-family: 'oswaldlight', sans-serif;
-    font-size: 16rem;
+    font-size: 17rem;
+    color: #999999;
+    position: absolute;
+    top: 45rem;
+    left: 30rem;
 }
 .flag {
     height: 17rem;
@@ -411,19 +415,35 @@ header {
 }
 .currency div {
     display: inline-block;
-    line-height: 17rem;
+}
+.currency div:last-child {
+    margin-left: 3rem;
+    cursor: pointer;
+}
+#currency div:last-child:after {
+    content: "";
+    display: inline-block;
+    height: 7rem;
+    width: 9rem;
+    background: url('../images/icons/icons.png') -303rem 0 no-repeat;
+    margin: 0 0 3rem 2rem;
+}
+#currency:hover {
+    color: #000000;
+}
+#currency:hover div:last-child:after {
+    background: url('../images/icons/icons.png') -293rem 0 no-repeat;
 }
 .logo {
     position: absolute;
-    top: 20rem;
+    top: 24rem;
     left: 50%;
-    margin-left: -95rem;
+    margin-left: -128rem;
 }
 .account-info {
     position: absolute;
     font-family: 'oswaldlight', sans-serif;
     font-size: 16rem;
-    font-weight: bold;
 }
 .account-info li {
     display: inline-block;
@@ -675,7 +695,7 @@ header {
 .location-icon {
     height: 25rem;
     width: 18rem;
-    background: url('../images/icons/icons.png') no-repeat -249px 0;
+    background: url('../images/icons/icons.png') no-repeat -249rem 0;
     position: absolute;
 }
 .zip-address {
@@ -797,7 +817,7 @@ footer {
     margin-top: 25rem;
 }
 /* Mobile View --------------------------------------------------------------*/
-@media (max-width: 767rem) {
+@media (max-width: 767px) {
     .container {
         width: 360rem;
         padding-right: 20rem;
@@ -878,7 +898,7 @@ footer {
     }
 }
 /* Tablet View --------------------------------------------------------------*/
-@media (min-width: 768rem) and (max-width: 999rem) {
+@media (min-width: 768px) and (max-width: 999px) {
     .container {
         width: 660rem;
         padding-right: 20rem;
@@ -976,7 +996,7 @@ footer {
     }
 }
 /* Desktop View -------------------------------------------------------------*/
-@media (min-width: 1000rem) {
+@media (min-width: 1000px) {
     .container {
         width: 1000rem;
         padding-right: 30rem;
@@ -986,8 +1006,8 @@ footer {
         display: none;
     }
     .account-info {
-        right: 80rem;
-        top: 60rem;
+        right: 30rem;
+        top: 45rem;
     }
     nav ul li:hover {
         background-color: #167c9a;
